Creates index.html. Adds header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Weather Report</title>
 </head>
 <body>
-    
+    <header id="banner">
+        <h1>Weather Report
+            <span id="banner-city-of"><h3>the city of <span id="banner-city-name">Seattle</span></h3></span>
+        </h1>
+    </header>
 </body>
 </html>
