Creates 'temperature-block' section

--- a/index.html
+++ b/index.html
@@ -12,5 +12,13 @@
             <span id="banner-city-of"><h3>the city of <span id="banner-city-name">Seattle</span></h3></span>
         </h1>
     </header>
+
+    <section id="temperature-block">
+        <h2 class="headings">Temperature</h2>
+        <h2 id="temp">64</h2>
+        <h2 class="arrow" id="up-arrow"></h2> 
+        <h2 class="arrow" id="down-arrow"></h2>
+    </section>
+
 </body>
 </html>
