Creates 'sky-block' section

--- a/index.html
+++ b/index.html
@@ -20,5 +20,16 @@
         <h2 class="arrow" id="down-arrow"></h2>
     </section>
 
+    <section id="sky-block">
+        <h2 class="headings">Sky</h2>
+        <select name="sky">
+            <option value="sunny">Sunny</option>
+            <option value="cloudy">Cloudy</option>
+            <option value="rainy">Rainy</option>
+            <option value="snow">Snow</option>
+        </select>
+        <!--dropdown for : 'Sunny', 'Rainy', 'Cloudy', 'Lightning'-->
+    </section>
+
 </body>
 </html>
