Creates 'weather-garden-block' section

--- a/index.html
+++ b/index.html
@@ -31,5 +31,11 @@
         <!--dropdown for : 'Sunny', 'Rainy', 'Cloudy', 'Lightning'-->
     </section>
 
+    <section id="weather-garden-block">
+        <h2>Weather Garden</h2>
+        <h2 id="sky-landscape">🌧🌈⛈🌧🌧💧⛈🌧🌦🌧💧🌧🌧</h2>
+        <h2 id="ground-landscape">🌲🌲⛄️🌲⛄️🍂🌲🍁🌲🌲⛄️🍂🌲</h2>
+    </section>
+
 </body>
 </html>
