Adds container class and styling

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
 </head>
-<body>
+
+<body class="container">
     <header id="banner">
         <h1>Weather Report
             <span id="banner-city-of"><h3>the city of <span id="banner-city-name">Seattle</span></h3></span>
