Adds 'city-name-block' section.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="styles/index.css" rel="stylesheet" />
     <title>Weather Report</title>
 </head>
 
@@ -30,6 +31,13 @@
             <option value="snow">Snow</option>
         </select>
         <!--dropdown for : 'Sunny', 'Rainy', 'Cloudy', 'Lightning'-->
+    </section>
+
+    <section id="city-name-block">
+        <h2 class="headings">City Name</h2>
+        <!--free text field-->
+        <input type="text">
+        <!--reset button-->
     </section>
 
     <section id="weather-garden-block">
