Build structure of page and link to CSS

--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles/index.css">
     <title>Weather Report</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Change the Weather</h1>
+        <h2> in <span id="cityName">Seattle</span></h2>
+        
+        <form action="">
+            <label for="changeCity">Change city:</label>
+            <input type="text" id="changeCity" name="changeCity">
+            <button type="reset" name="resetButton" id="resetButton">Reset</button>
+        </form>
+    </header>
+    <main>
+        <section id="changeTemp">
+            <p id="up">Increase</p>
+            <p id="down">Decrease</p>
+            <div id="temp">
+                <p>74</p>
+            </div>
+        </section>
+        <section id="landscape">
+            <div id="sky"></div>
+            <div id="garden"></div>
+        </section>
+    </main>
 </body>
 </html>
