Set up index.html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
+    <link rel="stylesheet" type="text/css" href="/styles/index.css" />
 </head>
 <body>
+    <header>
+        <section class="header-cover" id="top">
+            <h1 class="title"> Kristin's Weather Report</h1>
+            <h3 class="subtitle">For the lovely city of</h3>
+        </section>
+    </header>
     
+    <footer>
+
+    </footer>
 </body>
 </html>
