Add font-awesome icons and turn controls into buttons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles/index.css">
+    <script src="https://kit.fontawesome.com/bfe72cc9b2.js" crossorigin="anonymous"></script>
     <title>Weather Report</title>
 </head>
 <body>
@@ -20,8 +21,8 @@
     </header>
     <main>
         <section id="changeTemp">
-            <p id="up">Increase</p>
-            <p id="down">Decrease</p>
+            <button class="tempControl"><i class="fas fa-arrow-up"></i> Increase</button>
+            <button class="tempControl"><i class="fas fa-arrow-down"></i> Decrease</button>
             <div id="temp">
                 <p>74</p>
             </div>
