Add headings to each section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </header>
     <main>
         <section id="changeTemp">
+            <h4>Current Temperature</h4>
             <button class="tempControl"><i class="fas fa-arrow-up"></i> Increase</button>
             <button class="tempControl"><i class="fas fa-arrow-down"></i> Decrease</button>
             <div id="temp">
@@ -28,6 +29,7 @@
             </div>
         </section>
         <section id="landscape">
+            <h4>See the Weather</h4>
             <div id="sky"></div>
             <div id="garden"></div>
         </section>
