Center content on page

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
     <main>
         <section id="changeTemp">
             <h4>Current Temperature</h4>
-            <button id="increaseTemp" class="tempControl"><i class="fas fa-arrow-up"></i> Increase</button>
-            <button id="decreaseTemp" class="tempControl"><i class="fas fa-arrow-down"></i> Decrease</button>
+            <div id="tempControls">
+                <button id="increaseTemp" class="tempControl"><i class="fas fa-arrow-up"></i> Increase</button>
+                <button id="decreaseTemp" class="tempControl"><i class="fas fa-arrow-down"></i> Decrease</button>
+            </div>
             <div id="temp">
                 <p>74</p>
             </div>
