--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <button id="decreaseTemp" class="tempControl"><i class="fas fa-arrow-down"></i> Decrease</button>
             </div>
             <div id="temp">
-                <p>74</p>
+                <p id="num">74</p>
             </div>
         </section>
         <section id="landscape">
