Change font-family on body and add degree symbol to temp

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles/index.css">
     <script src="https://kit.fontawesome.com/bfe72cc9b2.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Readex+Pro:wght@300;600;700&display=swap" rel="stylesheet"> 
     <title>Weather Report</title>
 </head>
 <body>
@@ -27,7 +30,7 @@
                 <button id="decreaseTemp" class="tempControl"><i class="fas fa-arrow-down"></i> Decrease</button>
             </div>
             <div id="temp">
-                <p id="num">74</p>
+                <p id="num">74&#176;F</p>
             </div>
         </section>
         <section id="landscape">
