--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
+    <link href="styles/index.css" rel="stylesheet" type="text/css">
 </head>
-<body>
-    
+<body class="grid">
+    <header class="header">
+        <h1>Weather Report</h1><p>For the lovely city of Seattle</p>
+    </header>
+    <nav>
+        <div>
+            <div>Temperature</div>
+            <div>Sky</div>
+            <div>City Name</div>
+        </div>
+    </nav>
+    <div>
+        <div>Weather Garden</div>
+        <div>EMOJIS :)</div>
+    </div>
 </body>
 </html>
