general skeleton static

--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@100;300;900" rel="stylesheet">
     <title>Weather Report</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Weather Report</h1>
+    </header>
+
+    <section>
+        <sidebar>
+            Place things in here
+        </sidebar>
+        <information>
+            Main stuff goes here
+        </information>
+    </section>
+
+    <footer>
+        <p>Copyright &copy; 2020</p>
+    </footer>
+
+    <script src="src/index.js"></script>
 </body>
 </html>
