general skeleton, flex

--- a/index.html
+++ b/index.html
@@ -17,10 +17,25 @@
 
     <section>
         <sidebar>
-            Place things in here
+            <div class="sidebar-container">
+                <div class="sidebar-obj">
+                    <h2>Temperature</h2>
+                </div>
+                <div class="sidebar-obj">
+                    <h2>Sky</h2>  
+                </div>
+                <div class="sidebar-obj">
+                    <h2>City Name</h2>
+                </div>
+
+            </div>
         </sidebar>
         <information>
-            Main stuff goes here
+            <div class="information-container">
+                <div class="information-obj">
+                    <h2>Weather Garden</h2>
+                </div>
+            </div>
         </information>
     </section>
 
