--- a/index.html
+++ b/index.html
@@ -4,9 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&family=Space+Grotesk&display=swap" rel="stylesheet">
+    <script src="src/index.js" type="text/javascript"></script>
     <title>Weather Report</title>
 </head>
 <body>
-    
+    <h1>Weather Report</h1>
+    <p>For the lovely city of <span id="city">Seattle</span></p>
+
+    <section id="weather-garden">
+        <h2>Weather Garden</h2>
+        <div id="garden">
+            <div id="sky">Placeholder: Here is the sky</div>
+            <div id="ground">Placeholder: Here is the ground</div>
+        </div>
+    </section>
+
+    <div id="weather-controls">
+
+        <section id="set-temperature-box">
+            <h2>Temperature</h2>
+            <div id="temp-controls">
+                <span id="up-arrow">⬆️</span>
+                <span id="temp-display">65</span>
+                <span id="down-arrow">⬇️</span>
+            </div>
+            <button class="button" id="reset-temp">Reset</button>
+        </section>
+
+        <section id="select-sky-box">
+            <h2>Sky</h2>
+            <select id="select-sky">
+                <option value="none">None</option>
+                <option value="sunny">Sunny</option>
+                <option value="cloudy">Cloudy</option>
+                <option value="rainy">Rainy</option>
+                <option value="snowy">Snowy</option>
+            </select>
+            <button class="button" id="reset-temp">Reset</button>
+        </section>
+
+        <section id="set-city-box">
+            <h2>City Name</h2>
+            <input id="set-city"type="text">
+            <button class="button" id="reset-city">Reset</button>
+        </section>
+        
+    </div>
 </body>
 </html>
