--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="styles/index.css" rel="stylesheet"/>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
 </head>
 <body>
-    
+    <header class="header">
+        <h1>Weather Report</h1>
+        <h3>for the lovely city of ✨<span id="header-city">Tacoma</span>✨</h3>
+    </header>
+
+    <section class="temperature">
+        <h2>Temperature</h2>
+        <div id="temperature-content">
+            <div id="toggle-arrows">
+                <p><button id="increase-temp">⬆</button></p>
+                <p><button id="decrease-temp">⬇</button></p>
+            </div>
+            <p><span id="current-temp">44</span></p>
+        </div>
+    </section>
+
+    <section class="sky">
+        <h2>Sky</h2>
+    </section>
+
+    <section class="city">
+        <h2>City</h2>
+    </section>
+
+    <section class="weather">
+        <h1>Your Weather Forecast</h1>
+    </section>
 </body>
 </html>
