sky option dropdown menu, city text input box and reset button

--- a/index.html
+++ b/index.html
@@ -26,14 +26,25 @@
 
     <section class="sky">
         <h2>Sky</h2>
+
+        <select id="sky-options">
+            <option value="sunny">sunny</option>
+            <option value="cloudy">cloudy</option>
+            <option value="rainy">rainy</option>
+            <option value="snowy">snowy</option>
+        </select>
     </section>
 
     <section class="city">
         <h2>City</h2>
+        <form>
+            <input type="text">
+            <input type="reset" value="reset">
+        </form>
     </section>
 
     <section class="weather">
-        <h1>Your Weather Forecast</h1>
+        <h1>Weather Garden</h1>
     </section>
 </body>
 </html>
