--- a/index.html
+++ b/index.html
@@ -5,42 +5,41 @@
         <meta name="viewport" content="width=device-width">
         <title>Weather report</title>
         <link href="styles/index.css" rel="stylesheet" type="text/css" />
-        <script src="src/index.js"></script>
+        <script src="scripts/index.js"></script>
     </head>
     <body>
         <nav>
             <div class="row">
-                <div class="col-4">
-                    <select id="sky">
+                <div class="col-5">
+                    <select id="sky" onchange="changeSky()">
                         <option value="sunny">Sunny</option>
                         <option value="cloudy">Cloudy</option>
                         <option value="rainy">Rainy</option>
                         <option value="snowy">Snowy</option>
                     </select>
                 </div>
-                <div class="col-4">
+                <div class="col-3">
                     <input type="text" id="city" placeholder="City">
                 </div>
                 <div class="col-4">
                     <div class="row">
                         <div class="col-4">
-                            <button id="reduceTemp">-</button>
+                            <button class="tempSelector" id="reduceTemp">-</button>
                         </div>
                         <div class="col-4">
-                            <p>75&deg;</p>
+                            <p class="temperature" id="temperature_small"></p>
                         </div>
                         <div class="col-4">
-                            <button id="increaseTemp">+</button>
+                            <button class="tempSelector" id="increaseTemp">+</button>
                         </div>                                                
                     </div>
                 </div>                                
             </div>
         </nav>
         <main>
-            
-            <h2 id="cityname">Seattle</h2>
-            <h1 id="temperature">75&deg;</h1>
-            
+            <h2 id="cityname"></h2>
+            <h1 class="temperature" id="temperature_big"></h1>
+            <div id="landscape"><img class="landscape" src="./assets/landscapes/grass.png"></div>
         </main>   
         <footer>
             InaccuWeather 
