Add media queries to improve responsiveness on mobile, tablet, and desktop

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <main>
         <section id="changeTemp">
-            <h4>Control the Temperature</h4>
+            <h4>Control the<br>Temperature</h4>
             <div id="tempControls">
                 <button id="increaseTemp" class="tempControl"><i class="fas fa-arrow-up"></i> Increase</button>
                 <button id="decreaseTemp" class="tempControl"><i class="fas fa-arrow-down"></i> Decrease</button>
@@ -34,7 +34,7 @@
             </div>
         </section>
         <section id="changeWeather">
-            <h4>Control the Weather</h4>
+            <h4>Control the<br>Weather</h4>
             <label for="selectSky" id="skyLabel">Change the sky:</label>
             <select name="selectSky" id="selectSky">
                 <option value="">Select a sky option</option>
@@ -49,6 +49,6 @@
             </div>
         </section>
     </main>
-    <script src="src/index.js"></script>
+    <script src="src/index.js" type="text/javascript"></script>
 </body>
 </html>
