layout is set up mostly. Could use some fine tuning. No js code yet

--- a/index.html
+++ b/index.html
@@ -19,12 +19,31 @@
             <section class="arrow" id="downArrow">⬇️</section>
             <section id="temp">71</section>
         </section>
-        <section class="toggleBox" id="sky">Sky</section>
-        <section class="toggleBox" id="city">CityName</section>
+        <section class="toggleBox" id="skyBox">
+            <h3>Sky</h3>
+            <select>
+                <option>Sunny</option>
+                <option>Cloudy</option>
+                <option>Rainy</option>
+                <option>Snowy</option>
+            </select>
+        </section>
+        <section class="toggleBox" id="cityBox">
+            <section id="cityFirstHalfBox">
+                <h3>City</h3>
+                <input placeholder="Seattle"></input>
+            </section>
+            <section id="citySecondHalfBox">
+                <button id="resetButton">Reset</button>
+            </section>
+        </section>
     </section>
     <section id="section3">
         <h4>Weather Garden</h4>
-        <section id="garden">Flowers and sky</section>
+        <section id="garden">
+            <p id="sky">🌨❄️🌨🌨❄️❄️🌨❄️🌨❄️❄️🌨🌨</p>
+            <p id="landscape">🌸🌿🌼__🌷🌻🌿_☘️🌱_🌻🌷</p>
+        </section>
     </section>
 </body>
 </html>
