--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Weather Report</title>
 </head>
 <body>
-    
+    <section>
+        <h1>Weather Report</h1>
+    </section>
 </body>
 </html>
