--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
+    <link href = "styles/index.css" rel = "stylesheet"/>
 </head>
 <body>
-    
+    <main id = "main-section">
+        
+    </main>
+    <script src = "src/index.js"></script>
 </body>
 </html>
