--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/index.css">
     <title>Weather Report</title>
 </head>
 <body>
     
+    <div class="container">
+        <div class="item"> </div>
+        <div class="item"> </div>
+        <div class="item"> </div>
+        <div class="item"> </div>
+    </div>
+    
+    <script src="src/index.js"></script>
 </body>
 </html>
