created html for all required elements

--- a/index.html
+++ b/index.html
@@ -7,6 +7,38 @@
     <title>Weather Report</title>
 </head>
 <body>
+    <section>
+        <h1>Weather Report for</h1>
+    </section>
+
+    <section>
+        <h2>Temperature</h2>
+        <h2 id= "currentTemp">60°F</h2>
+        <button id= "decrease">-</button>
+        <button id= "increase">+</button>
+    </section>
+
+    <section>
+        <h2>Sky</h2>
+        <select name="skyChoice">
+            <option value="sunny">Sunny</option>
+            <option value="cloudy">Cloudy</option>
+            <option value="rainy">Rainy</option>
+            <option value="snowy">Snowy</option>
+        </select>
+    </section>
+
+    <section>
+        <h2>Which city?</h2>
+        <label for="cityName">City Name</label>
+        <input type="text" name="cityName" required minlength ="1" maxlength= "50">
+        <button>Reset</button>
+    </section>
+
+    <section>
+        <h2>Weather Landscape</h2>
+        <p>"🌾🌾_🍃_🪨__🛤_🌾🌾🌾_🍃"</p>
+    </section>
     
 </body>
 </html>
