--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
         <h2>Weather Landscape</h2>
         <p>"🌾🌾_🍃_🪨__🛤_🌾🌾🌾_🍃"</p>
     </section>
-    
+    <script type="text/javascript "src="src/index.js"></script>
 </body>
 </html>
