Creates basic skeleton for Weather Report wire frame

--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Report</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Weather Report</title>
+        <link href="styles/index.css" rel="stylesheet" />
+    </head>
+    <body>
+        <div class="container">
+
+            <!-- Main/top section-->
+            <div id="title">
+                <h1>Weather Report</h1>
+                <h3>For the lovely city of {city name here}</h3>
+            </div>
+
+            <!-- snacks section-->
+            <div id="snacks">
+                <h4>Yummy foods to eat in this weather</h4>
+            </div>
+        
+            <!-- Three content sections -->
+            <div class="temperature-area">
+                <h3 id="temperature-heading">Temperature</h3>
+                <div id="increase-temp">↑</div>
+                <div id="decrease-temp">↓</div>
+                <div id="current-temp">75</div>
+            </div>
+
+            <div class="sky-area">
+                <h3 id="sky-heading">Sky</h3>
+                <div id="drop-down">Dropdown here</div>
+            </div>
+            <div class="city-area">
+                <h3 id="city-heading">City</h3>
+                <div id="city-search">Search bar here</div>
+            </div>
+
+        <!-- Footer-->
+        <!-- <footer>
+            <h4>Get in touch:</h4>&nbsp;<a href="mailto:mcbride.rac@gmail.com"> Email</a>&nbsp;|&nbsp;<a href="https://www.linkedin.com/in/racmcbride/" target="_blank">LinkedIn</a>
+        </footer> -->
+        </div>
+      </body>
 </html>
