--- a/index.html
+++ b/index.html
@@ -4,9 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/index.css">
     <title>Weather Report</title>
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+            <div class="header-container">
+                <h1 class="header-text">
+                    Weather Report of <span id="location">Hometown</span>
+                </h1>
+            </div>
+        </header>
+
+        <main class="container">
+            <div class="row">
+                <section class="col control-section">
+                    <section class="temp-control">
+                        <h3 id="temp">70</h3>
+                        <div class="btn-container">
+                            <button class="btn">up</button>
+                            <button class="btn">down</button>
+                        </div>
+                    </section>
+                    <section class="sky-control">
+                        <select name="sky" id="sky">
+                            <h3>Sky</h3>
+                            <option value="sunny">Sunny</option>
+                            <option value="cloudy">Cloudy</option>
+                            <option value="rainy">Rainy</option>
+                            <option value="snowy">Snowy</option>
+                        </select>
+                    </section>
+                    <section class="location-control">
+                        <h3>Location</h3>
+                        <form action="">
+                            <input type="text">
+                            <button type="submit"></button>
+                        </form>
+                    </section>
+                </section>
+                <section class="col view-section"></section>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
