--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
     <title>Weather Report</title>
 </head>
 <body>
+    <header id="weatherApp">
+        Weather App Name
+    </header>
+    <section>
+        <h1 id="city">
+            <input type="text" id="typeCityName" value="San Antonio" name="name">
+            San Antonio
+            <button id="reset" type="reset">
+                Reset
+            </button>
+        </h1>
+    </section>
+    <section id="weatherContainer">
+        <div id="weatherSky">
+            <button id="changeSky"></button>
+        </div>
+        <div id=tempControl>
+            <div id="tempDisplay"></div>
+            <button id="tempIncrease"></button>
+            <button id="tempDecrease"></button>
+        </div>
+        <div id="weatherLand"></div>
+    </section>
     
 </body>
 </html>
