--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles/index.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
 </head>
 <body>
-    
+    <header class="header__header">
+        <div id="title" class="header__section">
+            <h1>Weather Report</h1>
+        </div>
+        <div id="city" class="header__section">
+            <h1>San Francisco</h1>
+        </div>
+    </header>
+
+    <section class="data__section">
+        <section class="data__temp">
+            <h2>Temperature</h2>
+        </section>
+        <section class="data__sky">
+            <h2>Sky</h2>
+            <select id="sky__selector">
+                <option>Sunny</option>
+                <option>Cloudy</option>
+                <option>Rainy</option>
+                <option>Snowy</option>
+            </select>
+        </section>
+        <section class="data__city">
+            <h2>City Name</h2>
+        </section>
+    </section>
+
+    <section class="weather__garden">
+        <div class="sky">
+            <div id="sky__left"></div>
+            <h2>Weather Garden</h2>
+            <div id="sky__right"></div>
+        </div>
+        <div id="garden"></div>
+    </section>
 </body>
 </html>
