added select button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     </section>
     <section id="weatherContainer">
         <div id="weatherSky">
-            <button id="changeSky"></button>
+            <select id="changeSky">
+                <option>Today the sky looks...</option>
+            </select>
         </div>
         <div id=tempControl>
             <div id="tempDisplay"></div>
