--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
+    <link href="styles/index.css" rel="stylesheet">
 </head>
 <body>
     <section>
         <h1>Weather Report for</h1>
     </section>
 
-    <section>
+    <section class="tempDefault">
         <h2>Temperature</h2>
         <h2 id= "currentTemp">60°F</h2>
         <button id= "decrease">-</button>
