Adds temperature increment/decrement functionality

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Weather Report</title>
         <link href="styles/index.css" rel="stylesheet" />
+        <script src="src/index.js" type="text/javascript"></script>
     </head>
     <body>
         <div class="container">
@@ -21,7 +22,7 @@
                 <h4>Yummy foods to eat in this weather</h4>
             </div>
         
-            <!-- Three content sections -->
+            <!-- Temperature section -->
             <div class="temperature-area">
                 <h3 id="temperature-heading">Temperature</h3>
                 <div id="increase-temp">↑</div>
@@ -33,6 +34,7 @@
                 <h3 id="sky-heading">Sky</h3>
                 <div id="drop-down">Dropdown here</div>
             </div>
+
             <div class="city-area">
                 <h3 id="city-heading">City</h3>
                 <div id="city-search">Search bar here</div>
