Changes landscapes dependent on temp

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link href="styles/index.css" rel="stylesheet">
 </head>
 <body>
-    <div id="temp-box">
+    <div id="landscape">🌲🌲⛄️🌲⛄️🍂🌲🍁🌲🌲⛄️🍂🌲</div>
+    <div id="temp-box" class="fifty-degrees">
     </div>
     <button id="increase">Increase</button>
     <button id="decrease">Decrease</button>
