functional click and type weather station / temp gauge

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 <body>
     <main id = "main-section">
     </main>
+
+    <section id = "temp-container">
+        <button class = "temp-gauge" id = "decTemp">←</button>
+        <section class = "temp-gauge" id = "temperature" contenteditable = "true">93</section>
+        <button class = "temp-gauge" id = "incTemp">→</button>
+    </section>
+
     <script src = "src/index.js"></script>
 </body>
 </html>
