adds select tag as sky, responsive to user

--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
     <link href="styles/index.css" rel="stylesheet">
 </head>
 <body>
+    <div id="sky">☁️ ☁️ ☁️ ☀️ ☁️ ☁️</div>
     <div id="landscape">🌲🌲⛄️🌲⛄️🍂🌲🍁🌲🌲⛄️🍂🌲</div>
-    <div id="temp-box" class="fifty-degrees">
-    </div>
+    <div id="temp-box" class="fifty-degrees"></div>
     <button id="increase">Increase</button>
     <button id="decrease">Decrease</button>
+    <select name='sky' id='sky-select'>
+        <option value='sunny' selected>Sunny</option>
+        <option value='cloudy'>Cloudy</option>
+        <option value='rainy'>Rainy</option>
+        <option value='snowy'>Snowy</option>
+    </select>
     <script src='src/index.js'></script>
 </body>
 </html>
