changes city name from text input. passes wave 4.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="styles/index.css" rel="stylesheet">
 </head>
 <body>
+    <h1 id='display-city'>Seattle</h1>
     <div id="sky">☁️ ☁️ ☁️ ☀️ ☁️ ☁️</div>
     <div id="landscape">🌲🌲⛄️🌲⛄️🍂🌲🍁🌲🌲⛄️🍂🌲</div>
     <div id="temp-box" class="fifty-degrees"></div>
@@ -19,6 +20,7 @@
         <option value='rainy'>Rainy</option>
         <option value='snowy'>Snowy</option>
     </select>
+    <input type="text" id="city-name">
     <script src='src/index.js'></script>
 </body>
 </html>
