adds city reset button. passes wave 5.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <option value='snowy'>Snowy</option>
     </select>
     <input type="text" id="city-name">
+    <button id='reset'>Reset City</button>
     <script src='src/index.js'></script>
 </body>
 </html>
