added js code to change landscape according to temp ranges

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <section>
         <h2>Weather Landscape</h2>
-        <p>"🌾🌾_🍃_🪨__🛤_🌾🌾🌾_🍃"</p>
+        <p id="landscape">🌾🌾_🍃_🪨__🛤_🌾🌾🌾_🍃</p>
     </section>
     <script type="text/javascript "src="src/index.js"></script>
 </body>
