add initial wireframe and some working css

--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
+    <link href="styles/index.css" rel="stylesheet" type="text/css">
 </head>
-<body>
-    
+<body class = "grid">
+    <header class=header>
+        <h1 class="inline">Weather Report</h1>
+        <p class="inline">For the lovely city of </p>
+    </header>
+    <section id="temp"class="deets"><span class="text">Temp</span></section>
+    <section id="sky"class="deets"></section>
+    <section id="city"class="deets"></section>
+
+    <main class="main">
+        <p id="display-title">Weather Garden</p>
+    </main>
+    <script src="scripts/index.js"></script>
 </body>
 </html>
