add working space in header

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body class = "grid">
     <header class=header>
-        <h1 class="inline">Weather Report</h1>
-        <p class="inline">For the lovely city of </p>
+        <h1>Weather Report</h1>
+        <p>For the lovely city of </p>
     </header>
     <section id="temp"class="deets"><span class="text">Temp</span></section>
     <section id="sky"class="deets"></section>
