added js code to adjust sky landscape according to selected sky levels

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <section>
         <h2>Sky</h2>
-        <select name="skyChoice">
+        <select class= "skyChoice" name="skyChoice">
             <option value="sunny">Sunny</option>
             <option value="cloudy">Cloudy</option>
             <option value="rainy">Rainy</option>
@@ -38,8 +38,10 @@
 
     <section>
         <h2>Weather Landscape</h2>
-        <p id="landscape">🌾🌾_🍃_🪨__🛤_🌾🌾🌾_🍃</p>
+        <p id= "sky">☁️☀️☁️☀️☁️☀️☁️☀️☁️☀️☁️</p>
+        <p id= "landscape">🌾🌾_🍃_🪨__🛤_🌾🌾🌾_🍃</p>
     </section>
+
     <script type="text/javascript "src="src/index.js"></script>
 </body>
 </html>
