--- a/index.html
+++ b/index.html
@@ -6,7 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
 </head>
+
+
 <body>
+
+    <header class="app_name">
+        <h1>"WEATHER REPORT"</h1>
+    </header>
+
+    <section class='temperature_section'>
+        <h2>Today's Temp</h2>
+        <div class='temperature_content'>
+            <div class='temperature_controls'>
+                <span id='increaseTempControl'>⬆️</span>
+                <span id="decreaseTempControl">⬇️</span>
+            </div>
+            <span id='tempValue' class='green'>78</span>
+        </div>
+    </section>
+
+    <section class='city-name_section'>
+        <h2>Where would you like to go?</h2>
+        <input type='text' id='cityNameInput' value='Los Angeles'>
+        <button id="cityNameReset" class="city-name__reset-btn">Reset</button>
+    </section>
     
+    <section class='sky_section'>
+        <span>
+            Welcome To
+            <select id='skySelect'>
+                <option>Sunny</option>
+                <option>Cloudy</option>
+                <option>Windy</option>
+                <option>Rainy</option>
+                <option>Snowy</option>
+            </select>
+        </span>
+        <span id='headerCityName' class='header__city-name'>
+        </span>
+    </section>
+
+    <script src="src/index.js" type="text/javascript"></script>
 </body>
 </html>
