add temp, change temp section tag to ul/li tags

--- a/index.html
+++ b/index.html
@@ -12,9 +12,25 @@
         <h1>Weather Report</h1>
         <p>For the lovely city of </p>
     </header>
-    <section id="temp"class="deets"><span class="text">Temp</span></section>
+    <nav>
+        <ul>
+            <li id="temp" class="deets">
+                <p class="text">Temperature</p>
+                <section>
+                    <p class="temp-text">Temperature</p>
+                </section>
+            </li>
+            <li id="sky" class="deets">
+                <p class="text">Sky</p>
+            </li>
+            <li id="city" class="deets">
+                <p class="text">City Name</p>
+            </li>
+        </ul>
+    </nav>
+    <!-- <section id="temp"class="deets"><span class="text">Temp</span></section>
     <section id="sky"class="deets"></section>
-    <section id="city"class="deets"></section>
+    <section id="city"class="deets"></section> -->
 
     <main class="main">
         <p id="display-title">Weather Garden</p>
