--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
+    <link href="../styles/index.css" rel="stylesheet">
 </head>
 <body>
+    <header class="header">
+        <ul>
+          <li>TEMPERATURE</li>
+        </ul>
+        <ul class = "big-container grid-container">
+          <li class = day-box>what</li>
+          <li class = day-box>if</li>
+          <li class = day-box>it</li>
+          <li class = day-box>were</li>
+          <li class = day-box>pur-</li>
+          <li class = day-box>ple</li>
+          <li class = day-box>?</li>
+        </ul>
+    </header>
     
 </body>
 </html>
