--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Weather Report</h1>
         <p>For the lovely city of </p>
     </header>
-    <nav>
+    <nav class="nav">
         <ul>
             <li id="temp" class="deets">
                 <p class="text">Temperature</p>
