--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 
     <main class="main">
         <p id="display-title">Weather Garden</p>
+        <section id="weather-garden-display" class="garden-display">
+            <p>Weather Garden Display.</p>
+        </section>
     </main>
     <script src="scripts/index.js"></script>
 </body>
