--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <main id = "main-section">
     </main>
 
-    <section id = "temp-container">
+    <div id = "temp-container">
         <button class = "temp-gauge" id = "decTemp">←</button>
         <section class = "temp-gauge" id = "temperature" contenteditable = "true">93</section>
         <button class = "temp-gauge" id = "incTemp">→</button>
-    </section>
+    </div>
 
     <script src = "src/index.js"></script>
 </body>
