beautify temp gauge

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <main id = "main-section">
     </main>
 
-    <div id = "temp-container">
-        <button class = "temp-gauge" id = "decTemp">←</button>
-        <section class = "temp-gauge" id = "temperature" contenteditable = "true">93</section>
-        <button class = "temp-gauge" id = "incTemp">→</button>
-    </div>
+    <section id = "temp-container" class = "frosted round">
+        <button class = "temp-gauge round" id = "decTemp">←</button>
+        <section class = "temp-gauge round" id = "temperature" contenteditable = "true">93</section>
+        <button class = "temp-gauge round" id = "incTemp">→</button>
+    </section>
 
     <script src = "src/index.js"></script>
 </body>
