add event listener for sky, sky reset button

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <section id="weather-garden">
         <h2>Weather Garden</h2>
         <div id="garden">
-            <div id="sky">Placeholder: Here is the sky</div>
-            <div id="ground">Placeholder: Here is the ground</div>
+            <div id="sky"></div>
+            <div id="ground"></div>
         </div>
     </section>
 
@@ -29,7 +29,7 @@
             <h2>Temperature</h2>
             <div id="temp-controls">
                 <span id="up-arrow">⬆️</span>
-                <span id="temp-display">65</span>
+                <span id="temp-display"></span>
                 <span id="down-arrow">⬇️</span>
             </div>
             <button class="button" id="reset-temp">Reset</button>
@@ -38,13 +38,12 @@
         <section id="select-sky-box">
             <h2>Sky</h2>
             <select id="select-sky">
-                <option value="none">None</option>
                 <option value="sunny">Sunny</option>
                 <option value="cloudy">Cloudy</option>
                 <option value="rainy">Rainy</option>
                 <option value="snowy">Snowy</option>
             </select>
-            <button class="button" id="reset-temp">Reset</button>
+            <button class="button" id="reset-sky">Reset</button>
         </section>
 
         <section id="set-city-box">
