Temp buttons work.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,13 @@
       <h3 class="sub"> For the lovely city of [city name]</h3>
     </header>
     <main>
-      <section class="left-section">Temperature</section>
-        <h3>Testing</h3>
+      <section class="left-section">Temperature
+        <br>
+        <button id="up-arrow">⬆️</button>
+        <br>
+        <button id="down-arrow">⬇️ </button>
+      </section>
+      <div id="temperature">70</div>
       <section class="weather-garden">Weather Garden</section>
     </main>
     <footer>©Lizet Tovar</footer>
